# fossil-network

./: README.md  meson.build
code/logic/: client.c  meson.build  request.c  server.c  socket.c
code/logic/fossil/: meson.build
code/logic/fossil/network/: client.h  framework.h  request.h  server.h  socket.h
code/tests/cases/: test_client.c  test_client.cpp  test_request.c  test_request.cpp  test_server.c  test_server.cpp  test_socket.c  test_socket.cpp
subprojects/: fossil-test.wrap
